[Bug Fixed]: 1. New Campaign page alignment issue fixed 2. Validation added in New Campaign Page 3. Partial responsive design of New Campaign

--- a/app/assets/stylesheets/campaigns.css
+++ b/app/assets/stylesheets/campaigns.css
@@ -409,10 +409,16 @@ only screen and (max-width: 460px) {
 .campaign-influencer-picture {
     border-radius: 50%;
     border: 4px solid #cdcdcd;
-    display: block;
-    margin: 0 auto;
+    display: inline-block;
+    margin-left: 15px ;
     width: 100px;
     height: 100px;
+}
+
+.influencer-description {
+    display: inline-block;
+    padding-left: 20px;
+    vertical-align: middle;
 }
 
 .campaign-create-wrapper .influencer-address {
@@ -433,7 +439,7 @@ only screen and (max-width: 460px) {
 }
 
 .influencer-profile-info{
-    padding: 28px 75px 34px 0;
+    padding: 28px 75px 34px 15px;
     width: 100%;
 }
 
@@ -567,6 +573,10 @@ only screen and (max-width: 460px) {
     width: 150px;
 }
 
+#campaign_name {
+    padding: 5px;
+}
+
 .download-campaign {
     text-align: center;
     margin: 20px 0;
@@ -687,6 +697,27 @@ only screen and (max-width: 420px) {
 
     .campaign-view button {
         margin-left: 0;
+    }
+}
+
+@media
+only screen and (max-width: 768px) {
+    .social-account-tab-content {
+        padding-right: 0;
+    }
+
+    .social-account-tab-content select, #post_cost, .campaign-date, #campaign_name, #campaign_text, #campaign_headline {
+        width: 100%;
+        margin: 5px 0;
+        padding: 5px;
+    }
+
+    #fb_bhanu {
+        padding: 10px;
+    }
+
+    .campaign-create-wrapper {
+        padding: 15px 10px;
     }
 }
 
